# cmake-sfml-project_template

./: .clang-format  .gitignore  CMakeLists.txt  build.ps1
include/: main.h
src/: main.cpp
